[REFACTOR] remove unnecessary eq() matchers and add assertion to test